# ctag-straempler

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  readme.md  sdkconfig  sdkconfig.default  sdkconfig.defaults  strampler_version.h.in
.github/workflows/: draft-release.yml
bootlogo/: readme.md
components/: spidriver  tft
components/audio/: CMakeLists.txt  adsr.c  audio.c  audio_luts.c  audio_utils.c  delay.c  dsp_lib.c  fill_buffer.c  modulation.c  sampler_fifo.c
components/audio/include/: adsr.h  audio.h  audio_events.h  audio_luts.h  audio_types.h  audio_utils.h  delay.h  dsp_lib.h  fill_buffer.h  (+2 more)
components/drivers/: CMakeLists.txt  component.mk  gpio.c  i2s_per.c  spi_per.c  storage.c
components/drivers/include/: gpio.h  i2s_per.h  mcp_cmds.h  pin_defs.h  spi_per.h  storage.h
components/drivers/ulp/: spi-bb.S  stack.S
components/freesound/: CMakeLists.txt  freesound.c
components/helix/: CMakeLists.txt  ChangesMadeForESP32.txt  ChangesMadeForPIC32.txt  buffers.c  component.mk  mp3dec.c
components/menu/: CMakeLists.txt  component.mk  menu.c  menu_config.c  menu_envelope.c  menu_items.c  menu_playmode.c  menu_utils.c  menusys.c  menutft.c  menutft_utils.c  preset.c
components/rest-api/: CMakeLists.txt  rest-api.c
components/tft/: CMakeLists.txt
components/ui/: CMakeLists.txt  ui.c
components/util/: CMakeLists.txt  c_timeutils.c  fileio.c  list.c  mp3.c  string_tools.c  timer_utils.c
components/wifi/: CMakeLists.txt  wifi.c
hardware/: readme.md
main/: CMakeLists.txt  Kconfig.projbuild  main.c
patchidf/: ffconf.h
(+32 files in other folders)
